...
class ProductsViewController: UITableViewController {
  
  let productCellIdentifier = "ProductIdentifier"
  let checkoutSegueIdentifier = "CheckoutSegueIdentifier"
  
  lazy var products = [
    Product(name: "Peas", unit: "per bag",
            priceInDollars: 0.95, image: #imageLiteral(resourceName: "PeasBag")),
    
    Product(name: "Eggs", unit: "per dozen",
            priceInDollars: 2.10, image: #imageLiteral(resourceName: "DozenEggs")),
    
    Product(name: "Milk", unit: "per bottle",
            priceInDollars: 1.30, image: #imageLiteral(resourceName: "MilkBottle")),
    
    Product(name: "Beans", unit: "per can",
            priceInDollars: 0.73, image: #imageLiteral(resourceName: "BeansCan"))
  ]
  
  lazy var productsInBag = Set<Product>()
  
  // button
  let shopBagButton: UIButton =  {
    let button = UIButton(frame: CGRect(x: 0, y: 0, width: 32, height: 32))
    button.setBackgroundImage(#imageLiteral(resourceName: "ShoppingBagGray"), for: .normal)
    return button
  }()
  
  // badge
  lazy var badgeLabel: UILabel = {
    let label = UILabel(frame: CGRect(x: 22, y: -2, width: 11, height: 11))
...
      checkoutViewController.lineItems = LineItem.orderedByNames(from:productsInBag)
    }
  }

  @objc dynamic func checkoutAction() {
    if productsInBag.count == 0 {
      self.showMessage(message: "Please select at least one product")
    }
    else {
      performSegue(withIdentifier: checkoutSegueIdentifier, sender: self)
    }
  }
  
...
