...
        <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
    </dependencies>
    <scenes>
        <!--Products-->
        <scene sceneID="9z9-fO-aSG">
            <objects>
                <tableViewController title="Products" id="vVv-Yc-B8L" customClass="ProductsViewController" customModule="ShopBag" customModuleProvider="target" sceneMemberID="viewController">
                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" allowsMultipleSelection="YES" rowHeight="80" sectionHeaderHeight="28" sectionFooterHeight="28" id="QAT-PZ-4cQ">
                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                        <prototypes>
                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="ProductIdentifier" rowHeight="80" id="Zk8-NM-RAS" userLabel="ProductCell" customClass="ProductTableViewCell" customModule="ShopBag" customModuleProvider="target">
...
